--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="stylesheet" type="text/css" href="fullpage.css" />
+  <script type="text/javascript" src="fullpage.js"></script>
 </head>
 <body>
   <app-root></app-root>
