--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,10 @@
 
   <link rel="stylesheet" type="text/css" href="fullpage.css" />
   <script type="text/javascript" src="fullpage.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body class="mat-typography">
   <app-root></app-root>
 </body>
 </html>
