--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-
-  <link rel="stylesheet" type="text/css" href="fullpage.css" />
+  <link rel="stylesheet" type="text/css" href="fullpage.css"/>
   <script src="vendors/easings.min.js"></script>
+  <script type="text/javascript" src="vendors/scrolloverflow.min.js"></script>
   <script type="text/javascript" src="fullpage.js"></script>
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
