--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>LucasSanches</title>
+  <title>DVLPR - Lucas Sanches</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/gif-code.gif">
 
   <link rel="stylesheet" type="text/css" href="fullpage.css"/>
   <script src="vendors/easings.min.js"></script>
