--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
   />
 
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-  <link href="http://cdn.jsdelivr.net/jquery.slick/1.5.5/slick.css" rel="stylesheet" />
-  <link href="http://cdn.jsdelivr.net/jquery.slick/1.5.5/slick-theme.css" rel="stylesheet" />
-  <script src="http://cdn.jsdelivr.net/jquery.slick/1.5.5/slick.min.js"></script>
+<!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>-->
+<!--  <link href="http://cdn.jsdelivr.net/jquery.slick/1.5.5/slick.css" rel="stylesheet" />-->
+<!--  <link href="http://cdn.jsdelivr.net/jquery.slick/1.5.5/slick-theme.css" rel="stylesheet" />-->
+<!--  <script src="http://cdn.jsdelivr.net/jquery.slick/1.5.5/slick.min.js"></script>-->
 </head>
 <body class="mat-typography">
 <app-root></app-root>
