Test no charging

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/gif-code.gif">
 
-  <link rel="stylesheet" type="text/css" href="fullpage.css"/>
-  <script src="vendors/easings.min.js"></script>
-  <script type="text/javascript" src="vendors/scrolloverflow.min.js"></script>
-  <script type="text/javascript" src="fullpage.js"></script>
+  <link rel="stylesheet" type="text/css" href="./node_modules/fullpage.js/dist/fullpage.css"/>
+  <script src="./node_modules/fullpage.js/vendors/easings.js"></script>
+  <script type="text/javascript" src="./node_modules/fullpage.js/dist/fullpage.js"></script>
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -18,12 +17,6 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
-
-
-<!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>-->
-<!--  <link href="http://cdn.jsdelivr.net/jquery.slick/1.5.5/slick.css" rel="stylesheet" />-->
-<!--  <link href="http://cdn.jsdelivr.net/jquery.slick/1.5.5/slick-theme.css" rel="stylesheet" />-->
-<!--  <script src="http://cdn.jsdelivr.net/jquery.slick/1.5.5/slick.min.js"></script>-->
 </head>
 <body class="mat-typography">
 <app-root></app-root>
